[gd_scene load_steps=18 format=3 uid="uid://baljtnt417hjn"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_wgfch"]
[ext_resource type="FontFile" uid="uid://xkrr0ijg7dce" path="res://assets/fonts/xilosa.ttf" id="2_et2k1"]
[ext_resource type="Texture2D" uid="uid://6yu2pn0tt5em" path="res://assets/characters/antonio/antonio-sprites-1.png" id="3_eflop"]
[ext_resource type="Texture2D" uid="uid://deb4n1a7omayu" path="res://assets/characters/antonio/attack-trail.png" id="4_cw4cu"]
[ext_resource type="Texture2D" uid="uid://bnvy1n1jmjxtf" path="res://assets/light3.png" id="5_sc7ta"]
[ext_resource type="Texture2D" uid="uid://dndi06qcelp65" path="res://assets/concept/art25.png" id="6_4odvt"]

[sub_resource type="LabelSettings" id="LabelSettings_phesw"]
font = ExtResource("2_et2k1")
font_size = 72
font_color = Color(0, 0, 0, 0.803922)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7c2b5"]
size = Vector2(242.095, 59.151)

[sub_resource type="CircleShape2D" id="CircleShape2D_beq7s"]
radius = 433.346

[sub_resource type="Animation" id="Animation_iccqh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AttackArea/Attack:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AttackArea/Attack:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Texture/AttackTrail:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Texture/AttackTrail:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PointLight2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(77.3359, -99.8174)]
}

[sub_resource type="Animation" id="Animation_jf2qi"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AttackArea/Attack:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.453465),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackArea/Attack:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.453465),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Texture:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Texture:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 35, 37]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Texture/AttackTrail:frame")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 2]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Texture/AttackTrail:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_1dyjh"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(70.611, -96.1204), Vector2(77.3359, -99.8174), Vector2(73.4931, -97.7048)]
}

[sub_resource type="Animation" id="Animation_5tpwq"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(174.846, -218.119), Vector2(151.309, -166.362), Vector2(50.4364, -184.847), Vector2(20.1746, -151.575), Vector2(-13.4497, -140.484), Vector2(-10.0873, -110.908), Vector2(-40.3492, -136.787), Vector2(94.148, -184.847), Vector2(121.047, -195.938), Vector2(147.947, -207.029), Vector2(174.846, -218.119)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ipph"]
_data = {
"RESET": SubResource("Animation_iccqh"),
"attack": SubResource("Animation_jf2qi"),
"idle": SubResource("Animation_1dyjh"),
"run": SubResource("Animation_5tpwq")
}

[sub_resource type="Animation" id="Animation_naix2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_b2la7"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 0.221914),
"update": 0,
"values": [Color(0.964706, 0.682353, 0.670588, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_joifh"]
_data = {
"RESET": SubResource("Animation_naix2"),
"hit": SubResource("Animation_b2la7")
}

[node name="player" type="CharacterBody2D"]
z_as_relative = false
y_sort_enabled = true
scale = Vector2(0.297404, 0.270494)
collision_mask = 30
script = ExtResource("1_wgfch")

[node name="Dialogue" type="Label" parent="."]
z_index = 10
z_as_relative = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -500.0
offset_top = -620.0
offset_right = 500.0
offset_bottom = -548.0
grow_horizontal = 2
pivot_offset = Vector2(500, 0)
label_settings = SubResource("LabelSettings_phesw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Collision" type="CollisionShape2D" parent="."]
z_as_relative = false
position = Vector2(13.4497, -29.5755)
shape = SubResource("RectangleShape2D_7c2b5")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(0, -179.5)
collision_mask = 4

[node name="Attack" type="CollisionPolygon2D" parent="AttackArea"]
visible = false
modulate = Color(1, 0.2, 0.101961, 0.0941176)
position = Vector2(0, -0.5)
rotation = 3.14159
polygon = PackedVector2Array(0, 0, -310, -306.667, -400, -173.333, -436.667, -3.33333, -400, 166.667, -323.333, 280)
disabled = true

[node name="PossibleAttackArea" type="Area2D" parent="."]
position = Vector2(0, -180)

[node name="Attack" type="CollisionShape2D" parent="PossibleAttackArea"]
modulate = Color(1, 0, 0, 1)
y_sort_enabled = true
position = Vector2(0, 0.499985)
shape = SubResource("CircleShape2D_beq7s")
disabled = true
debug_color = Color(0.607843, 0.529412, 0.278431, 0)

[node name="Texture" type="Sprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
scale = Vector2(1.04049, 0.981739)
texture = ExtResource("3_eflop")
offset = Vector2(0, -205)
hframes = 10
vframes = 4
frame = 1

[node name="AttackTrail" type="Sprite2D" parent="Texture"]
visible = false
position = Vector2(0, -207.114)
texture = ExtResource("4_cw4cu")
hframes = 3

[node name="Camera" type="Camera2D" parent="."]

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ipph")
}

[node name="AuxAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_joifh")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
modulate = Color(1, 1, 0.690196, 1)
self_modulate = Color(1, 1, 0.698039, 1)
show_behind_parent = true
z_index = 99
position = Vector2(77.3359, -99.8174)
color = Color(1, 0.960784, 0.811765, 0)
energy = 2.5
blend_mode = 2
shadow_filter_smooth = 64.0
texture = ExtResource("5_sc7ta")
texture_scale = 3.0

[node name="Art25" type="Sprite2D" parent="."]
visible = false
position = Vector2(60.5237, -280.967)
scale = Vector2(0.643097, 0.646252)
texture = ExtResource("6_4odvt")

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
